[package]
name = "lily"
version = "0.1.0"
edition = "2021"
description = "UI widgets for audio plugins using vizia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20"
num-traits = "0.2"

[dependencies.femtovg]
git = "https://github.com/femtovg/femtovg"
rev = "87fe627794f3f793d8e3a338c838a2f8e8a8aa9d"

[dependencies.vizia]
git = "https://github.com/vizia/vizia"
features = ["baseview"]
default-features = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.lily-derive]
path = "../lily-derive"

# [dependencies.nih_plug]
# git = "https://github.com/robbert-vdh/nih-plug"
# features = ["assert_process_allocs"]
# optional = true

[dev-dependencies]
assert_approx_eq = "1"

[features]
# nih = ["nih_plug"]

[[example]]
name = "showcase"
